[gd_scene load_steps=3 format=3 uid="uid://gxs2acj3ypck"]

[ext_resource type="Script" path="res://addons/skelerealms/scripts/GranularNavigation/nav_network_utility.gd" id="1_66fdk"]
[ext_resource type="ButtonGroup" uid="uid://c4win4xnqio2g" path="res://addons/skelerealms/scripts/GranularNavigation/network_tool_group.tres" id="2_wsyj7"]

[node name="network_plugin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_66fdk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 159.0
offset_bottom = 31.0

[node name="Add" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_wsyj7")
text = "Add"
flat = true

[node name="Select" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_wsyj7")
text = "Select"
flat = true

[node name="Merge" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Merge"
flat = true

[connection signal="toggled" from="HBoxContainer/Add" to="." method="_on_add_toggled"]
[connection signal="toggled" from="HBoxContainer/Select" to="." method="_on_select_toggled"]
[connection signal="pressed" from="HBoxContainer/Merge" to="." method="_on_merge_pressed"]
